@@ -38,6 +38,8 @@
 <p>2019-04-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pdb.c (WritePDBImage): Fix SourceForge issue #605
+&quot;heap-buffer-overflow in function WritePDBImage of coders/pdb.c&quot;.</li>
 <li>magick/widget.c: Add many const declarations.</li>
 <li>magick/display.c: Incorporate and eliminate display.h. Add many
 const declarations.</li>
